--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -3,7 +3,7 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Kangrui's Webpage # Website name
+title: Kangrui's Web Site # Website name
 baseURL: 'https://example.com/' # Website URL
 
 ############################
